[package]
name = "async-demo"
version = "1.0.3"
license = "MIT OR Apache-2.0"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"

[dependencies]
ndless = "0.8.5"
ndless-async = "0.1.1"
ndless-handler = "0.3.0"
futures-util = { version = "0.3.5", default-features = false, features = ["alloc", "async-await-macro"] }

[package.metadata.zehn]
name = "async-test"
compress = true
notice = "Auto generated with cargo-generate"
flags = "--240x320-support true"
