[package]
name = "hello-world-prompt"
version = "1.0.2"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"

[dependencies]
ndless = "0.7.1"
ndless-handler = "0.1.2"

[package.metadata.zehn]
name = "Hello World Prompt"
compress = true
notice = "Test"
flags = "--240x320-support true"
