[package]
name = "hello-world-sdl"
version = "1.0.1"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"

[dependencies]
ndless = "0.6.1"
ndless-handler = "0.1.2"
ndless-sdl = "0.1.8"

[package.metadata.zehn]
name = "Hello World SDL"
compress = true
notice = "Press ESC to exit"
flags = "--240x320-support true"
