[package]
name = "hello-world-sdl"
version = "1.0.2"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"

[dependencies]
ndless = "0.8.2"
ndless-handler = "0.2.1"
ndless-sdl = "0.1.9"

[package.metadata.zehn]
name = "Hello World SDL"
compress = true
notice = "Press ESC to exit"
flags = "--240x320-support true"
