[package]
name = "hello-world-sdl"
version = "1.0.3"
license = "MIT OR Apache-2.0"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"

[dependencies]
ndless = "0.8.2"
ndless-handler = "0.3.0"
ndless-sdl = "0.2.0"

[package.metadata.zehn]
name = "Hello World SDL"
compress = true
notice = "Press ESC to exit"
flags = "--240x320-support true"
