[package]
name = "hello-world-text"
version = "1.0.1"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"

[dependencies]
ndless = "0.6.0"
ndless-sdl = "0.1.7"
ndless-handler = "0.1.1"
ndless-freetype = "0.1.1"

[package.metadata.zehn]
name = "Hello World Text"
compress = true
notice = "Press ESC to exit"
flags = "--240x320-support true"
