[package]
name = "hello-world-text"
version = "1.0.3"
license = "MIT OR Apache-2.0"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"

[dependencies]
ndless = "0.8.2"
ndless-sdl = "0.1.9"
ndless-handler = "0.2.1"
ndless-freetype = "0.1.3"

[package.metadata.zehn]
name = "Hello World Text"
compress = true
notice = "Press ESC to exit"
flags = "--240x320-support true"
