[package]
name = "hello-world"
version = "0.2.1"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"

[dependencies]
nspire = "0.3.2"
ndless-sys = "0.1.1"
ndless-handler = "0.1.0"

[package.metadata.zehn]
name = "Hello World"
compress = true
notice = "Test"
flags = "--240x320-support true"
