[package]
name = "hello-world"
version = "1.0.3"
license = "MIT OR Apache-2.0"
authors = ["lights0123 <developer@lights0123.com>"]
edition = "2018"

[dependencies]
ndless = "0.8.2"
ndless-handler = "0.2.1"

[package.metadata.zehn]
name = "Hello World"
compress = true
notice = "Test"
flags = "--240x320-support true"
